[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sourced/Fonts/Open Sans/OpenSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Original/Backgrounds/malakia6.png" type="Texture" id=2]
[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 2
outline_color = Color( 0.0470588, 0.0392157, 0.0392157, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 42
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopMargin" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 163.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "PANDESIA"
align = 1

[node name="TitleMargin" type="MarginContainer" parent="VBoxContainer"]
margin_top = 167.0
margin_right = 1024.0
margin_bottom = 167.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 171.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 392.0
margin_top = 114.0
margin_right = 632.0
margin_bottom = 314.0

[node name="PlayButton" type="Button" parent="VBoxContainer/CenterContainer/Buttons"]
margin_right = 240.0
margin_bottom = 64.0
rect_min_size = Vector2( 240, 0 )
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="OptionsButton" type="Button" parent="VBoxContainer/CenterContainer/Buttons"]
margin_top = 68.0
margin_right = 240.0
margin_bottom = 132.0
rect_min_size = Vector2( 240, 0 )
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer/CenterContainer/Buttons"]
margin_top = 136.0
margin_right = 240.0
margin_bottom = 200.0
rect_min_size = Vector2( 240, 0 )
custom_fonts/font = SubResource( 2 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/CenterContainer/Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
